# near-chain-keys

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
api-server/: Cargo.toml
api-server/src/: main.rs  queue.rs  routes.rs
crates/chain-keys/: Cargo.toml  README.md
crates/chain-keys/.cargo/: config.toml
crates/chain-keys/contract/: Cargo.toml
crates/chain-keys/contract/src/: derivation.rs  lib.rs
crates/chain-keys/res/: chain_keys.wasm
crates/chain-keys/src/: lib.rs
crates/orbit-prefilter/: Cargo.toml  README.md
crates/orbit-prefilter/benches/: prefilter_bench.rs
crates/orbit-prefilter/src/: fingerprint.rs  lib.rs  precheck.rs  progressive.rs
crates/tail-encoding/: Cargo.toml
crates/tail-encoding/benches/: near_comparison.rs
crates/tail-encoding/src/: caip.rs  decode.rs  encode.rs  error_correction.rs  fraction.rs  key_derivation.rs  layered.rs  lib.rs  optimal_base.rs  residue.rs  signature.rs  tail_extract.rs
crates/wire-frame/: Cargo.toml  README.md
crates/wire-frame/examples/: gen_eth.rs  gen_frame.rs
crates/wire-frame/src/: lib.rs
keystore-worker/: Cargo.toml  test.sh
keystore-worker/src/: derivation.rs  input.rs  main.rs  output.rs  policy.rs
keystore-worker/src/signing/: mod.rs  solana.rs
near-contract/: Cargo.toml  README.md
near-contract/src/: authorization.rs  lib.rs
