[package]
name = "keystore-worker"
version = "0.1.0"
edition = "2021"
description = "TEE worker for chain-keys: derives keys and signs transactions"

[[bin]]
name = "keystore-worker"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"

# Key derivation
hkdf = "0.12"
sha2 = "0.10"

# Signing (ed25519 for Solana/NEAR)
ed25519-dalek = { version = "2", features = ["rand_core"] }

# k256 = { version = "0.13", features = ["ecdsa"] }  # v2: EVM

[profile.release]
opt-level = "s"
lto = true
strip = true
