[package]
name = "chain-keys"
version = "0.1.0"
edition = "2021"
description = "NEAR smart contract for cross-chain key management"

[workspace]
resolver = "2"
members = [
    "contract",
]

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

# cargo install cargo-run-script
# Then: cargo wasm, cargo c, cargo t
[package.metadata.scripts]
wasm = """#!/bin/bash
TARGET="${CARGO_TARGET_DIR:-target}"
set -e

cd "$(dirname $0)"
mkdir -p res

rustup target add wasm32-unknown-unknown
RUSTFLAGS='-C link-arg=-s' cargo build --package contract --target wasm32-unknown-unknown --release
cp $TARGET/wasm32-unknown-unknown/release/contract.wasm ./res/chain_keys.wasm
echo "Built: res/chain_keys.wasm"
ls -lh res/chain_keys.wasm
"""

check = """RUSTFLAGS="-A warnings" cargo check --package contract --target wasm32-unknown-unknown"""

test = """RUSTFLAGS="-A warnings" cargo test --package contract -- --nocapture"""
